step 1 prefer doing a roadmap

--- a/angular/src/app/pages/listtrends/listtrends.component.html
+++ b/angular/src/app/pages/listtrends/listtrends.component.html
@@ -76,7 +76,7 @@
       </p>
 
       <div>
-        <video controls autoplay class="video-galaxy-detail" src="{{ item.videos[0] }}"></video>
+        <video controls class="video-galaxy-detail" src="{{ item.videos[0] }}"></video>
       </div>
 
       <p class="title">
