--- a/angular/src/app/pages/roadmap/roadmap.component.sass
+++ b/angular/src/app/pages/roadmap/roadmap.component.sass
@@ -1,7 +1,12 @@
 .roadmap
   padding: 10px
+  color: white
   overflow: scroll
   background-image: radial-gradient(rgba(241,241,241,.6),rgba(241,241,241,.54),rgba(255,255,255,.4),rgba(241,241,241,.3),rgba(255,255,255,.1),rgba(255,255,255,.05))
   -webkit-animation-iteration-count: infinite
   .rm-high, .rm-mittel, .rm-low, .timeline
     overflow: auto
+input.ng-touched.ng-valid
+  border: 0px solid green
+input.ng-touched.ng-invalid
+  border: 1px solid red
