--- a/angular/src/app/pages/trend-detail/trend-detail.component.sass
+++ b/angular/src/app/pages/trend-detail/trend-detail.component.sass
@@ -29,3 +29,20 @@
     color: gray
   .vt-commented-author
     color: #673ab7
+.fas, .fab
+  font-size: 19px
+  color: pink
+
+.evalution
+  margin: 20px 0
+.start
+  border: 1px solid gray
+  background-color: #673ab7
+  color: white
+  padding: 5px
+  margin-right: 10px
+.end
+  border: 1px solid gray
+  color: white
+  background-color: #ffd953
+  padding: 5px
