--- a/angular/src/app/pages/trend-detail/trend-detail.component.sass
+++ b/angular/src/app/pages/trend-detail/trend-detail.component.sass
@@ -1,5 +1,16 @@
 .trends, .trend-vote
   font-size: large
+  .source-type
+    padding-left: 20px
+    span
+      color: #89efa8
+      border: 1px solid #666666
+  .evalution-user
+    margin-bottom: 10px
+    border: 1px dotted #89efa8
+    background: antiquewhite
+  .roadmap
+    margin-bottom: 15px
 .trend-vote
   margin-bottom: 50px
 .title
@@ -13,9 +24,7 @@
 .img:hover
   transform: scale(1.5,1.5)
   transition-duration: 6s
-.evalution-user
-  margin-bottom: 10px
-  background: antiquewhite
+
 .img-galaxy-detail, .video-galaxy-detail
   max-width: 100%
   padding: 5px
