--- a/angular/src/app/pages/roadmap/roadmap.component.sass
+++ b/angular/src/app/pages/roadmap/roadmap.component.sass
@@ -4,9 +4,18 @@
   overflow: scroll
   background-image: radial-gradient(rgba(241,241,241,.6),rgba(241,241,241,.54),rgba(255,255,255,.4),rgba(241,241,241,.3),rgba(255,255,255,.1),rgba(255,255,255,.05))
   -webkit-animation-iteration-count: infinite
+  .content-roadmap
+    overflow: scroll
   .rm-high, .rm-mittel, .rm-low, .timeline
     overflow: auto
 input.ng-touched.ng-valid
   border: 0px solid green
 input.ng-touched.ng-invalid
   border: 1px solid red
+
+.timeline
+  .vt-year-col
+    border: 1px solid #89efa8
+    padding: 5px 7px
+  .right
+    overflow-x: scroll
